k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmw-llc-consulting
  namespace: rmw-llc-consulting
  labels:
    app: rmw-llc-consulting
spec:
  selector:
    app: rmw-llc-consulting
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
